jsonStorage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: json-storage
  name: json-storage
  namespace: gitops-kustomize
spec:
  replicas: 1
  selector:
    matchLabels:
      app: json-storage
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: json-storage
    spec:
      imagePullSecrets:
      - name: artifactory-secret
      containers:
      - image: artifactory-artifactory.apps.xnkpeyx0.canadacentral.aroapp.io/gitops-local/json-storage:latest
        name: json-storage
        resources: {}
status: {}
